--- a/Localization/ru_RU.xaml
+++ b/Localization/ru_RU.xaml
@@ -48,6 +48,7 @@
     -->
 
     <!-- UI -->
+    <sys:String x:Key="LOCSucessStoryFilterSource">Filter by source</sys:String>
     <sys:String x:Key="LOCSucessStorySearch">Поиск</sys:String>
     <sys:String x:Key="LOCSucessStoryGlobalProgression">Глобальный прогрес</sys:String>
     <sys:String x:Key="LOCSucessStoryGameInformation">Информация</sys:String>
