--- a/Localization/fr_FR.xaml
+++ b/Localization/fr_FR.xaml
@@ -35,7 +35,7 @@
     <sys:String x:Key="LOCSucessStoryIntegrationShowTitle">Afficher le titre</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowGraphic">Afficher le graphique</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievements">Afficher la liste des succès</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationTopGameDetails">Intégrer au dessus de la description du jeu</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationTopGameDetails">Intégrer au dessus de la description</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationToggleDetails">Bouton à bascule avec détails</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationInCustomTheme">Intgération dans les thèmes personnalisés (si intégré)</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationButton">Ajouter un bouton</sys:String>
